plugins {
    // Apply the java plugin to add support for Java
    id 'java'
    id 'com.github.johnrengelman.shadow'
    id 'io.franzbecker.gradle-lombok' version '4.0.0'
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13
compileJava.options.encoding = 'UTF-8'

shadowJar {
    archiveBaseName.set('Otus')
    archiveVersion.set('0.1')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'ru.otus.hw09.DbServiceDemo'
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
    implementation 'com.h2database:h2:1.4.185'
    implementation 'ch.qos.logback:logback-classic:0.9.30'

}

test {
    useJUnitPlatform()
}

task run(type: JavaExec) {
    group = 'Run' // <-- change the name as per your need
    description = 'Run main method class DbServiceDemo'
    classpath sourceSets.main.runtimeClasspath // <-- Don't change this
    main = "ru.otus.hw09.DbServiceDemo"
    //jvmArgs = ["-Xms1g", "-Xmx1g","-XX:+UseG1GC"/*,"-Xlog:gc*:file=gc.log"*/]
    jvmArgs = ["-Duser.language=en"]
   //args "arg1", "arg2"
}

tasks.build.dependsOn tasks.shadowJar